# terraglamp

./: .env.example  .gitignore  .sourcery.yaml  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.mongo-debug.yml  docker-compose.yml  main.py  package-lock.json  pyproject.toml
backend/: mail_handler.py  settings.py
backend/admin/: app.py  view.py
backend/admin/templates/: base.html  home.html
backend/admin/views/: all_bookings_view.py  all_tents_view.py  all_users_view.py  create_booking_view.py
backend/aiogram_app/: app.py  baisic_commands.py  message_interface.py
backend/app/: api_router.py
backend/db/: crud.py  db_conn.py  schemas.py
backend/routes/: api_router.py  booking_router.py  mail_rourer.py  tent_router.py  user_router.py
caddy/: Caddyfile
frontend/: .env.example  .env.prod  index.html  package-lock.json  package.json
frontend/src/: App.tsx  antdTheme.ts  index.css  index.tsx  main.tsx
frontend/src/api/: booking.ts  config.ts
frontend/src/api/client/: index.ts
frontend/src/components/TitleImage/: TitleImage.tsx
frontend/src/components/about-us/: AboutUs.tsx
frontend/src/components/actions/: Actions.tsx
frontend/src/components/app/: App.tsx
frontend/src/components/burger-menu/: BurgerMenu.tsx
frontend/src/components/footer/: footer.tsx
frontend/src/components/forms/: FormValidationError.tsx  book_form.tsx
frontend/src/components/gallery/: Gallery.tsx
frontend/src/icons/: Inst.tsx  VK.tsx  WhatsApp.tsx
frontend/src/pages/: book_from_page.tsx  booking_success.tsx  main_page.tsx
frontend/src/store/: store.ts
(+19 files in other folders)
